# Agentic_AI_Crash_Course

./: .gitignore  README.md  main.py  pyproject.toml
1_Simple_llm_call/: call_llm.ipynb  list_gemini_models.py  list_gemini_models.txt
2_Health_analysis/: app.py  app2.py  blood_work_analysis.ipynb
3_vector_DB/: vector_DB_Basics.ipynb
4_RAG_Basics/: RAG.ipynb
5_Single_AI_Agents/: Product_query_Agent.ipynb
6_multi_model_AI_Agents/: Multimodel_demo.ipynb
7_Shopping_AGENT/: Reviews_API.py  Shopping_AGENT.py  app.py  store.db  store_expanded.db
8_project_telecom_chatbot/: app.py  ingest_faq.py  ingest_pdf.py
8_project_telecom_chatbot/chroma_store/: chroma.sqlite3
