[project]
name = "agentic-ai-crash-course"
version = "0.1.0"
description = "Learning GenAI, Agentic AI, LangChain, LangGraph, RAG and MCP"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
